add_compile_options(-Wno-unused-parameter)
add_compile_options(-Wno-narrowing)

add_subdirectory(xbasic)
add_subdirectory(xcommon)
add_subdirectory(xrouter)
add_subdirectory(xelection)
add_subdirectory(xchain_timer)
add_subdirectory(xkad)
add_subdirectory(xvnode)
add_subdirectory(xsystem_contract)
#add_subdirectory(uint128)
add_subdirectory(xvledger_test)
#add_subdirectory(xblockstore2_test)
