add_compile_options(-Wno-unused-parameter)
add_compile_options(-Wno-narrowing)

add_subdirectory(xbasic)
add_subdirectory(xcommon)
add_subdirectory(xrouter)
add_subdirectory(xelection)
add_subdirectory(xchain_timer)
add_subdirectory(xkad)
# add_subdirectory(xvnode)
# add_subdirectory(xvnetwork)
add_subdirectory(xsystem_contract)
#add_subdirectory(uint128)
add_subdirectory(xvledger_test)
add_subdirectory(xblockstore2_test)
add_subdirectory(xdata_test)
add_subdirectory(xverifier)
add_subdirectory(xloader)
add_subdirectory(xtxpool)
add_subdirectory(xblockmaker_test)
if (BUILD_METRICS)
    add_subdirectory(xmetrics)
endif()
add_subdirectory(xelect_net)
add_subdirectory(xdb)
add_subdirectory(xtxexecutor)
add_subdirectory(xrpc)
add_subdirectory(xunit_proof)
add_subdirectory(xmigrate)

