add_compile_options(-Wno-unused-parameter)
add_compile_options(-Wno-narrowing)

add_definitions(-DXENABLE_TESTS)

if (${XOS_ID} MATCHES "ubuntu")
    find_package(GTest REQUIRED)
endif()

add_subdirectory(xbasic)
add_subdirectory(xcommon)
add_subdirectory(xrouter)
add_subdirectory(xelection)
add_subdirectory(xchain_timer)
add_subdirectory(xkad)
# add_subdirectory(xvnode)
# add_subdirectory(xvnetwork)
add_subdirectory(xsystem_contract)
add_subdirectory(uint128)
add_subdirectory(xvledger_test)
add_subdirectory(xblockstore_test)
add_subdirectory(xdata_test)
add_subdirectory(xverifier)
add_subdirectory(xloader)
add_subdirectory(xtxpool)
add_subdirectory(xblockmaker_test)
add_subdirectory(xcontract_runtime)
add_subdirectory(xcontract_vm)
if (BUILD_METRICS)
    add_subdirectory(xmetrics)
endif()
add_subdirectory(xelect_net)
add_subdirectory(xdb)
add_subdirectory(xtxexecutor)
add_subdirectory(xrpc)
add_subdirectory(xunit_proof)
add_subdirectory(xmigrate)
add_subdirectory(xgenesis)
add_subdirectory(xsync)
add_subdirectory(xcheckpoint_test)
if (NOT DISABLE_EVM)
    add_subdirectory(xevm_engine_test)
    add_subdirectory(xevm_common_test)
    add_subdirectory(xevm_contract_runtime)
endif()
add_subdirectory(xgasfee)
add_subdirectory(xtopcl_test)
add_subdirectory(xmutisig)
add_subdirectory(xstate_mpt)
add_subdirectory(xstate_sync)
add_subdirectory(xstatestore_test)
add_subdirectory(xtransport)
add_subdirectory(xsafebox_test)
add_subdirectory(xstate_reset)
add_subdirectory(xstate_accessor)
add_subdirectory(xunit_service_test)
add_subdirectory(mbus_event_test)

if (XBUILD_CONSORTIUM)
    add_subdirectory(xca_auth_test)
endif()
add_subdirectory(xstatistic_test)
add_subdirectory(xpreprocess_test)

