cmake_minimum_required(VERSION 3.8)
add_compile_options(-static)
#add_compile_options(-std=c++11)

add_subdirectory(xcodec)
add_subdirectory(xbasic)
add_subdirectory(xvledger)
add_subdirectory(xconfig)
add_subdirectory(xloader)
add_subdirectory(xelection)
add_subdirectory(xpbase)
add_subdirectory(xkad)
add_subdirectory(xtransport)
add_subdirectory(xwrouter)
add_subdirectory(xgossip)
add_subdirectory(xelect_net)
add_subdirectory(xchain_timer)
add_subdirectory(xrouter)
add_subdirectory(xstore)
# add_subdirectory(xstate_accessor) # new contract only
# add_subdirectory(xcontract_common) # new contract only
if (BUILD_RUSTVM)
    add_subdirectory(xwasm_vm)
endif()
# add_subdirectory(xcontract_runtime)
# add_subdirectory(xcontract_api)
#add_subdirectory(xsystem_contracts)
# add_subdirectory(xconsensus)
add_subdirectory(xutility)
add_subdirectory(xcommon)
add_subdirectory(xstake)
# add_subdirectory(xnetwork)
add_subdirectory(xvnetwork)
add_subdirectory(xdb)
add_subdirectory(xcrypto)
add_subdirectory(xmutisig)
add_subdirectory(xdata)
add_subdirectory(xvm)
add_subdirectory(xrpc)
add_subdirectory(xmbus)
if (BUILD_METRICS)
    add_subdirectory(xmetrics)
endif()
add_subdirectory(xxbase)
add_subdirectory(xxg)
add_subdirectory(xnode)
add_subdirectory(https_client)
add_subdirectory(db_tool)
add_subdirectory(xverifier)
add_subdirectory(xBFT)
add_subdirectory(xunit_service)
add_subdirectory(xtxpool_v2)
add_subdirectory(xtxpool_service_v2)
add_subdirectory(xtxexecutor)
add_subdirectory(xtxstore)
add_subdirectory(xblockstore)
add_subdirectory(xcertauth)
add_subdirectory(xtopcl)
add_subdirectory(xchain_fork)
add_subdirectory(xchain_upgrade)
add_subdirectory(xblockmaker)
add_subdirectory(xmigrate)
