if (BUILD_GPERF)
    link_libraries(tcmalloc_and_profiler)
elseif (BUILD_GHPERF)
    link_libraries(tcmalloc_and_profiler)
elseif(TCMALLOC)
    link_libraries(tcmalloc_minimal)
endif()

add_subdirectory(xcodec)
add_subdirectory(xbasic)
add_subdirectory(xvledger)
add_subdirectory(xconfig)
add_subdirectory(xloader)
add_subdirectory(xelection)
add_subdirectory(xpbase)
add_subdirectory(xkad)
add_subdirectory(xtransport)
add_subdirectory(xwrouter)
add_subdirectory(xgossip)
add_subdirectory(xelect_net)
add_subdirectory(xchain_timer)
add_subdirectory(xrouter)
add_subdirectory(xstore)
add_subdirectory(xstate_accessor) # new contract only
add_subdirectory(xcontract_common) # new contract only
if (BUILD_RUSTVM)
    add_subdirectory(xwasm_vm)
endif()
add_subdirectory(xcontract_runtime)
add_subdirectory(xsystem_contract_runtime)
add_subdirectory(xsystem_contracts)
add_subdirectory(xcontract_vm)
add_subdirectory(xutility)
add_subdirectory(xcommon)
add_subdirectory(xvnetwork)
add_subdirectory(xdb)
add_subdirectory(xcrypto)
add_subdirectory(xmutisig)
add_subdirectory(xdata)
add_subdirectory(xvm)
add_subdirectory(xrpc)
add_subdirectory(xmbus)
if (BUILD_METRICS)
    add_subdirectory(xmetrics)
endif()
add_subdirectory(xxbase)
if (${XOS_ID} MATCHES "centos")
    add_subdirectory(xxg)
endif()
add_subdirectory(db_tool)
# add_subdirectory(xverifier)
add_subdirectory(xBFT)
add_subdirectory(xunit_service)
add_subdirectory(xtxpool_v2)
add_subdirectory(xtxpool_service_v2)
add_subdirectory(xtxexecutor)
add_subdirectory(xtxstore)
add_subdirectory(xblockstore)
add_subdirectory(xcertauth)
add_subdirectory(xtopcl)
add_subdirectory(xchain_fork)
add_subdirectory(xchain_upgrade)
add_subdirectory(xblockmaker)
add_subdirectory(xmigrate)
add_subdirectory(xgenesis)
add_subdirectory(xstatectx)
add_subdirectory(xevm_common)
if (NOT DISABLE_EVM)
    add_subdirectory(xevm_engine_rs)
    add_subdirectory(xevm_runner)
    add_subdirectory(xevm_contract_runtime)
    add_subdirectory(xevm)
    # add_subdirectory(xevm_common)
endif()
add_subdirectory(xgasfee)
add_subdirectory(xstate_mpt)
add_subdirectory(xstate_sync)
add_subdirectory(xdbstore)
add_subdirectory(xstatestore)
add_subdirectory(xhttp)
add_subdirectory(xsafebox)
add_subdirectory(xstate_reset)
if (XBUILD_CONSORTIUM)
    add_subdirectory(xca_auth)
endif()

add_subdirectory(xstatistic)

add_subdirectory(xpreprocess)
add_subdirectory(xplugin)
add_subdirectory(xversion)

